We should have exception check after promise operation https://bugs.webkit.org/show_bug.cgi?id=214610 <rdar://problem/65881794>

Reviewed by Youenn Fablet and Mark Lam.

Source/WebCore:

Test: js/dom/promise-should-have-exception-check-on-operation.html

Add exception check after promise operations.

* bindings/js/JSDOMPromiseDeferred.cpp:
(WebCore::DeferredPromise::reject):

LayoutTests:

* js/dom/promise-should-have-exception-check-on-operation-expected.txt: Added.
* js/dom/promise-should-have-exception-check-on-operation.html: Added.


Canonical link: https://commits.webkit.org/227528@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264802 268f45cc-cd09-0410-ab3c-d52691b4dbfc