Source/WebCore/bindings/js/JSDOMPromiseDeferred.cpp
@@ -142,7 +142,7 @@ void DeferredPromise::reject(Exception exception, RejectAsHandled rejectAsHandle
         return;
     }
 
-    auto scope = DECLARE_THROW_SCOPE(lexicalGlobalObject.vm());
+    auto scope = DECLARE_CATCH_SCOPE(lexicalGlobalObject.vm());
     auto error = createDOMException(lexicalGlobalObject, WTFMove(exception));
     if (UNLIKELY(scope.exception())) {
         ASSERT(isTerminatedExecutionException(lexicalGlobalObject.vm(), scope.exception()));
@@ -175,7 +175,7 @@ void DeferredPromise::reject(ExceptionCode ec, const String& message, RejectAsHa
         return;
     }
 
-    auto scope = DECLARE_THROW_SCOPE(lexicalGlobalObject.vm());
+    auto scope = DECLARE_CATCH_SCOPE(lexicalGlobalObject.vm());
     auto error = createDOMException(&lexicalGlobalObject, ec, message);
     if (UNLIKELY(scope.exception())) {
         ASSERT(isTerminatedExecutionException(lexicalGlobalObject.vm(), scope.exception()));
@@ -184,6 +184,7 @@ void DeferredPromise::reject(ExceptionCode ec, const String& message, RejectAsHa
 
 
     reject(lexicalGlobalObject, error, rejectAsHandled);
+    EXCEPTION_ASSERT(!scope.exception() || isTerminatedExecutionException(lexicalGlobalObject.vm(), scope.exception()));
 }
 
 void DeferredPromise::reject(const JSC::PrivateName& privateName, RejectAsHandled rejectAsHandled)
